Remove stinky ThreadLocalApplication
(or at least moved it to the examples project)